WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199486
Data Detectors are not working for context menus in clients that use the legacy preview API
https://bugs.webkit.org/show_bug.cgi?id=199486
Summary
Data Detectors are not working for context menus in clients that use the lega...
Tim Horton
Reported
2019-07-03 18:11:05 PDT
Data Detectors are not working for context menus in clients that use the legacy preview API
Attachments
Patch
(2.13 KB, patch)
2019-07-03 18:11 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-07-03 18:11:16 PDT
Created
attachment 373446
[details]
Patch
Tim Horton
Comment 2
2019-07-03 18:11:18 PDT
<
rdar://problem/52117322
>
WebKit Commit Bot
Comment 3
2019-07-03 19:35:13 PDT
Comment on
attachment 373446
[details]
Patch Clearing flags on attachment: 373446 Committed
r247132
: <
https://trac.webkit.org/changeset/247132
>
WebKit Commit Bot
Comment 4
2019-07-03 19:35:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug