Data Detectors are not working for context menus in clients that use the legacy preview API https://bugs.webkit.org/show_bug.cgi?id=199486 <rdar://problem/52117322>

Reviewed by Dean Jackson.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView assignLegacyDataForContextMenuInteraction]):
The Data Detectors code in the legacy preview path is guarded by a
#define that did not survive upstreaming. Remove it.


Canonical link: https://commits.webkit.org/213398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247132 268f45cc-cd09-0410-ab3c-d52691b4dbfc